# rust-metropolis

./: .gitignore  Cargo.toml
metro-core/: Cargo.toml
metro-core/src/: lib.rs
metro-core/src/analog/: mod.rs
metro-core/src/musical/: gate.rs  scale.rs
metro-core/src/sequencer/: mod.rs  sequencer.rs  stage_mode.rs
metro-g071/: Cargo.toml
metro-g071/src/: main.rs
src/: main.rs
src/analog/: note.rs
src/metropolis/: sequencer.rs
src/musical/: gate.rs  mod.rs  note.rs  scale.rs
